(library
 (name register_plugins)
 (modules register_plugins)
 (libraries plugin))

(executable
 (name gen_register_plugins)
 (modules gen_register_plugins)
 (libraries vfconfig))

(rule
 (target register_plugins.ml)
 (deps (:gen gen_register_plugins.exe))
 (mode promote)
 (action
  (run ./%{gen})))
