(executable
 (public_name vfide)
 (optional)
 (flags
  (:standard -linkall))
 (libraries
  num
  str
  frontend
  verifier
  shape_analysis
  vfconfig
  branch_png
  (select
   linemarks.ml
   from
   (linemarks_sourceview -> linemarks.sourceview.ml)
   (linemarks_fallback -> linemarks.fallback.ml))
  plugin))
