(rule
 (target branchleft_png.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gdk_pixbuf_mlsource} %{dep:branch-left.png}))))

(rule
 (target branchright_png.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gdk_pixbuf_mlsource} %{dep:branch-right.png}))))

 (library
  (optional)
  (name branch_png)
  (libraries lablgtk2))
